[package]
name = "twitter"
version = "0.1.1"
authors = ["n01e0 <noleo@vanillabeans.mobi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauthcli = "*"
url = "1.5.1"
ureq = { version = "*", features = [ "json" ]}
serde = "*"
serde_json = "*"
serde_derive = "*"
toml = "*"
percent-encoding = "2.1.0"
