[package]
name = "twitter"
version = "0.1.3"
authors = ["n01e0 <noleo@vanillabeans.mobi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
oauthcli = "*"
percent-encoding = "2.1.0"
serde = { version = "*", features = [ "derive" ]}
serde_json = "*"
serde_derive = "*"
toml = "*"
url = "1.5.1"
ureq = { version = "*", features = [ "json" ]}
colored = "1.9.3"
